--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ The basic ideas if our group includes - <br>
   <div class="w3-row-padding w3-white" style="margin-top:64px">
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-card">
-        <img src="photos/shreyansh.jpg" alt="John" style="width:100%">
+        <img src="https://github.com/safar27/kshitij_website.com/tree/main/photos/shreyansh.jpg" alt="John" style="width:100%">
         <div class="w3-container">
           <h3>Shreyansh Sahu</h3>
           <p class="w3-opacity">Co-Founder</p>
@@ -144,7 +144,7 @@ The basic ideas if our group includes - <br>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-card">
-        <img src="photos/vishal.jpg" alt="Jane" style="width:100%">
+        <img src="https://github.com/safar27/kshitij_website.com/tree/main/photos/vishal.jpg" alt="Jane" style="width:100%">
         <div class="w3-container">
           <h3>Vishal Shrivastava</h3>
           <p class="w3-opacity">Co-Founder</p>
@@ -155,7 +155,7 @@ The basic ideas if our group includes - <br>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-card">
-        <img src="photos/cp.jpg" alt="Mike" style="width:100%">
+        <img src="https://github.com/safar27/kshitij_website.com/tree/main/photos/cp.jpg" alt="Mike" style="width:100%">
         <div class="w3-container">
           <h3>Chandra Pratap</h3>
           <p class="w3-opacity">Secretary</p>
@@ -166,7 +166,7 @@ The basic ideas if our group includes - <br>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-card">
-        <img src="photos/suhani.jpg" alt="dan" style="width:100%">
+        <img src="https://github.com/safar27/kshitij_website.com/tree/main/photos/suhani.jpg" alt="dan" style="width:100%">
         <div class="w3-container">
           <h3>Suhani Jain</h3>
           <p class="w3-opacity">Tresurar</p>
@@ -205,31 +205,31 @@ The basic ideas if our group includes - <br>
 
   <div class="w3-row-padding" style="margin-top:64px">
     <div class="w3-col l3 m6">
-      <img src="photos/1.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A microphone">
+      <img src="https://github.com/safar27/kshitij_website.com/tree/main/photos/1.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A microphone">
     </div>
     <div class="w3-col l3 m6">
-      <img src="photos/2.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A phone">
+      <img src="https://github.com/safar27/kshitij_website.com/tree/main/photos/2.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A phone">
     </div>
     <div class="w3-col l3 m6">
-      <img src="photos/3.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A drone">
+      <img src="https://github.com/safar27/kshitij_website.com/tree/main/photos/3.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A drone">
     </div>
     <div class="w3-col l3 m6">
-      <img src="photos/4.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Soundbox">
+      <img src="https://github.com/safar27/kshitij_website.com/tree/main/photos/4.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Soundbox">
     </div>
   </div>
 
   <div class="w3-row-padding w3-section">
     <div class="w3-col l3 m6">
-      <img src="photos/5.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A tablet">
+      <img src="https://github.com/safar27/kshitij_website.com/tree/main/photos/5.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A tablet">
     </div>
     <div class="w3-col l3 m6">
-      <img src="photos/6.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A camera">
+      <img src="https://github.com/safar27/kshitij_website.com/tree/main/photos/6.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A camera">
     </div>
     <div class="w3-col l3 m6">
-      <img src="photos/7.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A typewriter">
+      <img src="https://github.com/safar27/kshitij_website.com/tree/main/photos/7.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A typewriter">
     </div>
     <div class="w3-col l3 m6">
-      <img src="photos/8.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A tableturner">
+      <img src="https://github.com/safar27/kshitij_website.com/tree/main/photos/8.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A tableturner">
     </div>
   </div>
 </div>
@@ -268,7 +268,7 @@ The basic ideas if our group includes - <br>
       </p>
     </form>
     <!-- Image of location/map -->
-    <img src="photos/Background.png" class="w3-image w3-greyscale" style="width:100%;margin-top:48px">
+    <img src="https://github.com/safar27/kshitij_website.com/tree/main/photos/Background.png" class="w3-image w3-greyscale" style="width:100%;margin-top:48px">
   </div>
 </div>
 
