--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body, html {
 .bgimg-1 {
   background-position: center;
   background-size: cover;
-  background-image: url("photos/ks1.jpg");
+  background-image: url("photos/ks1.JPG");
   min-height: 100%;
 }
 .w3-myfont {
@@ -121,7 +121,7 @@ The basic ideas if our group includes - <br>
       <p><a href="#ourwork" class="w3-button w3-black"><i class="fa fa-th"> </i> View Our Works</a></p>
     </div>
     <div class="w3-col m6">
-      <img class="w3-image w3-round-large" src="photos/logo.jpg" alt="Buildings" width="700" height="394">
+      <img class="w3-image w3-round-large" src="photos/logo.JPG" alt="Buildings" width="700" height="394">
     </div>
   </div>
 </div>
@@ -205,31 +205,31 @@ The basic ideas if our group includes - <br>
 
   <div class="w3-row-padding" style="margin-top:64px">
     <div class="w3-col l3 m6">
-      <img src="https://github.com/safar27/kshitij_website.com/tree/main/photos/1.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A microphone">
+      <img src="https://github.com/safar27/kshitij_website.com/tree/main/photos/1.JPG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A microphone">
     </div>
     <div class="w3-col l3 m6">
-      <img src="https://github.com/safar27/kshitij_website.com/tree/main/photos/2.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A phone">
+      <img src="https://github.com/safar27/kshitij_website.com/tree/main/photos/2.JPG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A phone">
     </div>
     <div class="w3-col l3 m6">
-      <img src="https://github.com/safar27/kshitij_website.com/tree/main/photos/3.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A drone">
+      <img src="https://github.com/safar27/kshitij_website.com/tree/main/photos/3.JPG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A drone">
     </div>
     <div class="w3-col l3 m6">
-      <img src="https://github.com/safar27/kshitij_website.com/tree/main/photos/4.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Soundbox">
+      <img src="https://github.com/safar27/kshitij_website.com/tree/main/photos/4.JPG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Soundbox">
     </div>
   </div>
 
   <div class="w3-row-padding w3-section">
     <div class="w3-col l3 m6">
-      <img src="https://github.com/safar27/kshitij_website.com/tree/main/photos/5.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A tablet">
+      <img src="https://github.com/safar27/kshitij_website.com/tree/main/photos/5.JPG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A tablet">
     </div>
     <div class="w3-col l3 m6">
-      <img src="https://github.com/safar27/kshitij_website.com/tree/main/photos/6.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A camera">
+      <img src="https://github.com/safar27/kshitij_website.com/tree/main/photos/6.JPG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A camera">
     </div>
     <div class="w3-col l3 m6">
-      <img src="https://github.com/safar27/kshitij_website.com/tree/main/photos/7.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A typewriter">
+      <img src="https://github.com/safar27/kshitij_website.com/tree/main/photos/7.JPG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A typewriter">
     </div>
     <div class="w3-col l3 m6">
-      <img src="https://github.com/safar27/kshitij_website.com/tree/main/photos/8.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A tableturner">
+      <img src="https://github.com/safar27/kshitij_website.com/tree/main/photos/8.JPG" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A tableturner">
     </div>
   </div>
 </div>
